extends Control

## MainMenu.gd - ä¸»èœå•ç•Œé¢
## ç®¡ç†ä¸»èœå•çš„UIäº¤äº’

## ä¿¡å·
signal start_game_pressed()
signal instructions_pressed()
signal settings_pressed()
signal quit_pressed()

## èŠ‚ç‚¹å¼•ç”¨
@onready var title_label: Label = $MarginContainer/VBoxContainer/TitleLabel
@onready var start_button: Button = $MarginContainer/VBoxContainer/ButtonContainer/StartButton
@onready var instructions_button: Button = $MarginContainer/VBoxContainer/ButtonContainer/InstructionsButton
@onready var settings_button: Button = $MarginContainer/VBoxContainer/ButtonContainer/SettingsButton
@onready var quit_button: Button = $MarginContainer/VBoxContainer/ButtonContainer/QuitButton
@onready var version_label: Label = $MarginContainer/VBoxContainer/VersionLabel

## ç”Ÿå‘½å‘¨æœŸ

func _ready() -> void:
	# è¿žæŽ¥æŒ‰é’®ä¿¡å·
	start_button.pressed.connect(_on_start_pressed)
	instructions_button.pressed.connect(_on_instructions_pressed)
	settings_button.pressed.connect(_on_settings_pressed)
	quit_button.pressed.connect(_on_quit_pressed)
	
	# è®¾ç½®ç‰ˆæœ¬ä¿¡æ¯
	version_label.text = "v0.1.0"
	
	# æ’­æ”¾èœå•éŸ³ä¹ - ä½¿ç”¨å»¶è¿Ÿè°ƒç”¨ç¡®ä¿ SoundManager å·²åŠ è½½
	if has_node("/root/SoundManager"):
		call_deferred("_play_menu_music")

func _process(_delta: float) -> void:
	# ESCé”®é€€å‡º
	if Input.is_action_just_pressed("ui_cancel"):
		get_tree().quit()

func _play_menu_music() -> void:
	var sm = get_node("/root/SoundManager")
	if sm:
		sm.play_music("menu")

func _play_sound(sfx_name: String) -> void:
	var sm = get_node("/root/SoundManager")
	if sm:
		sm.play_sfx(sfx_name)

## æŒ‰é’®å›žè°ƒ

func _on_start_pressed() -> void:
	_play_sound("button_click")
	emit_signal("start_game_pressed")
	
	# åˆ‡æ¢åˆ°æ¸¸æˆåœºæ™¯
	get_tree().change_scene_to_file("res://scenes/Main.tscn")

func _on_instructions_pressed() -> void:
	_play_sound("button_click")
	emit_signal("instructions_pressed")
	
	# æ˜¾ç¤ºæ“ä½œè¯´æ˜Ž
	_show_instructions()

func _on_settings_pressed() -> void:
	_play_sound("button_click")
	emit_signal("settings_pressed")
	
	# æ‰“å¼€è®¾ç½®èœå•
	_show_settings()

func _on_quit_pressed() -> void:
	_play_sound("button_click")
	emit_signal("quit_pressed")
	
	# ç¡®è®¤é€€å‡º
	if _confirm_quit():
		get_tree().quit()

## è¾…åŠ©å‡½æ•°

func _show_instructions() -> void:
	var panel = Panel.new()
	panel.set_anchors_preset(Control.PRESET_CENTER)
	panel.size = Vector2(600, 400)
	
	var label = Label.new()
	label.text = """
ðŸŽ® æ“ä½œè¯´æ˜Ž

âª å·¦æŒ¡æ¿: Aé”®
â© å³æŒ¡æ¿: ç©ºæ ¼é”®
ðŸš€ å‘å°„çƒ: ç©ºæ ¼é”® (é•¿æŒ‰è“„åŠ›)
â¸ï¸ æš‚åœ: ESCé”®

ðŸŽ¯ æ¸¸æˆç›®æ ‡

ä½¿ç”¨æŒ¡æ¿å‡»æ‰“å¼¹ç ï¼Œ
èŽ·å¾—å°½å¯èƒ½é«˜çš„åˆ†æ•°ï¼

ðŸ’¡ æç¤º

- è¿žå‡»å¯ä»¥æå‡å€çŽ‡
- å‡»ä¸­ç‰¹æ®ŠåŒºåŸŸèŽ·å¾—é¢å¤–åˆ†æ•°
- ä¿æŒå°çƒä¸è½å…¥åº•éƒ¨
"""
	label.set_anchors_preset(Control.PRESET_FULL_RECT)
	label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	
	var close_button = Button.new()
	close_button.text = "å…³é—­"
	close_button.position = Vector2(250, 350)
	close_button.size = Vector2(100, 40)
	close_button.pressed.connect(panel.queue_free)
	
	panel.add_child(label)
	panel.add_child(close_button)
	add_child(panel)

func _show_settings() -> void:
	# åˆ›å»ºè®¾ç½®é¢æ¿
	var panel = Panel.new()
	panel.set_anchors_preset(Control.PRESET_CENTER)
	panel.size = Vector2(500, 400)
	panel.color = Color(0.1, 0.1, 0.15, 0.95)
	
	var vbox = VBoxContainer.new()
	vbox.set_anchors_preset(Control.PRESET_FULL_RECT)
	vbox.add_theme_constant_override("separation", 20)
	
	var title = Label.new()
	title.text = "âš™ï¸ è®¾ç½®"
	title.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	title.add_theme_font_size_override("font_size", 32)
	vbox.add_child(title)
	
	var sound_label = Label.new()
	sound_label.text = "ðŸ”Š éŸ³æ•ˆéŸ³é‡"
	vbox.add_child(sound_label)
	
	var sound_slider = HSlider.new()
	sound_slider.min_value = 0
	sound_slider.max_value = 100
	sound_slider.value = 80
	sound_slider.custom_minimum_size = Vector2(300, 20)
	vbox.add_child(sound_slider)
	
	var music_label = Label.new()
	music_label.text = "ðŸŽµ éŸ³ä¹éŸ³é‡"
	vbox.add_child(music_label)
	
	var music_slider = HSlider.new()
	music_slider.min_value = 0
	music_slider.max_value = 100
	music_slider.value = 60
	music_slider.custom_minimum_size = Vector2(300, 20)
	vbox.add_child(music_slider)
	
	var spacer = Control.new()
	spacer.size_flags_vertical = Control.SIZE_EXPAND_FILL
	vbox.add_child(spacer)
	
	var close_button = Button.new()
	close_button.text = "å…³é—­"
	close_button.custom_minimum_size = Vector2(150, 50)
	close_button.pressed.connect(panel.queue_free)
	vbox.add_child(close_button)
	
	panel.add_child(vbox)
	add_child(panel)

func _confirm_quit() -> bool:
	# ç®€å•çš„ç¡®è®¤å¯¹è¯æ¡†
	return true

## å…¬å¼€æŽ¥å£

func set_version(version: String) -> void:
	version_label.text = version
